Update permissions in PR validation workflow to read-all

--- a/.github/workflows/pr-validator.yml
+++ b/.github/workflows/pr-validator.yml
@@ -13,10 +13,7 @@ env:
 jobs:
   validate-pr:
     runs-on: ubuntu-latest
-    permissions:
-      pull-requests: read
-      issues: read
-      contents: read
+    permissions: read-all
 
     steps:
       - name: Setup validation variables
