--- a/.github/workflows/pr-validator.yml
+++ b/.github/workflows/pr-validator.yml
@@ -68,7 +68,9 @@ jobs:
         id: check-testcase-requirement
         run: |
           echo Test ....
-          gh project list
+            PROJECTS=$(gh project list --owner ${{ steps.setup.outputs.owner }} --format json)
+            echo "Available projects:"
+            echo "$PROJECTS" | jq '.'
           echo Test End ....
           echo "::group::Checking TestCase requirement"
           ORG="${{ steps.setup.outputs.owner }}"
